# xfemm

./: .gitignore  CONTEXT.md
cfemm/femmcli/: LuaMagneticsCommands.cpp
cfemm/fmesher/: fmesher.cpp  writepoly.cpp
cfemm/fmesher/test/: CMakeLists.txt  check_virtual_gap_rewrite.cmake  virtual_gap_line_simple.fem  virtual_gap_periodic_guard.fem
cfemm/fpproc/: CMakeLists.txt  vgap_benchmark.cpp
cfemm/fsolver/: fsolver.cpp  fsolver.h  harmonic2d.cpp  harmonicaxi.cpp  static2d.cpp  staticaxi.cpp
cfemm/libfemm/: CElement.cpp  CElement.h  CSegment.cpp  CSegment.h  FemmProblem.cpp  FemmReader.cpp
mfemm/: mag_tutorial.ans  mag_tutorial.fem
mfemm/examples/: femm_manual_tutorial_example.m
mfemm/xfemm_mex_files_for_win64/: fpproc_interface_mex.mexw64  hpproc_interface_mex.mexw64  mexfmesher.mexw64  mexfsolver.mexw64  mexhsolver.mexw64
test/: Lamination_1a1c094ceeed84b2.mat  MotorFEM_2502882661.ans  MotorFEM_2502882661.fem  XFEM_Snapshot.m  XFEM_TestingScript.m
test/virtual_gap_demos/: README.md  generate_virtual_gap_cases.py  run_virtual_gap_benchmarks.py
test/virtual_gap_demos/cases/: case1_steel_steel_nominal.fem  case1_steel_steel_truegap_100um.fem  case1_steel_steel_vgap_100um.fem  case2_surface_layer_nominal.fem  case2_surface_layer_vgap_100um.fem  case3_pm_interface_nominal.fem  case3_pm_interface_vgap_100um.fem
